# Ros_ws_kr20_kr120_mujoco_DSL

./: .gitattributes  .gitignore  MUJOCO_LOG.TXT  frames_2025-10-21_12.54.50.gv  frames_2025-10-21_13.02.42.gv  moveit_smoke.py  patch_inertia.py
src/bringup_cpp/: CMakeLists.txt  package.xml
src/bringup_cpp/src/: custom_interface_functions.cpp.cpp  custom_interface_server.cpp  integration.cpp  kr120_pick_place.cpp  kr120_pick_placeTest.cpp  model_spawner.cpp  ordine_viti.txt  pose_target.txt  screwing_config.json  simple_moveit_example.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: ExecuteAction.action  ExecuteSequence.action
src/custom_interfaces/srv/: AddTray2.srv  BringTray.srv  ConfirmWorkflow.srv  InitParameters.srv  InternalScrewByNum.srv  InternalScrewingSequence.srv  MoveTray.srv  OperatorPositionTray.srv  PickPlace.srv  PositionTray.srv  Screw.srv  ScrewingUnit.srv  TriggerAction.srv
src/kr20_kr120_description/: CMakeLists.txt  model.config  package.xml  resource_placeholder.sdf
src/kr20_kr120_description/collision/: BAT1.stl  BAT2.stl  CMG1.stl  CMG2.stl  CMG34.stl  MTQ12.stl  MTQ3_MAG.stl  MTQ_MAG.stl  PCDU.stl  bottom_panel.stl  bottom_panel_gaz.stl  kr120_asse1.stl  kr120_asse2.stl  kr120_asse3.stl  kr120_asse4.stl  kr120_asse5.stl  kr120_base.stl  kr120_basement.stl  kr120_flange.stl  kr120_gyro_left.stl  kr120_gyro_right.stl  kr120_pinza_left.stl  kr120_pinza_right.stl  kr120_slider.stl  kr20_asse1.stl  kr20_asse2.stl  kr20_asse3.stl  kr20_asse4.stl  kr20_asse5.stl  kr20_base.stl  kr20_basement.stl  kr20_fixed.stl  kr20_flange.stl  kr20_polso.stl  kr20_slide.stl  pareti.stl  rl_infrastruttura.stl  rl_lifter.stl  rl_piastra.stl  rl_rotary.stl  (+10 more)
src/kr20_kr120_description/config/: controllers.yaml  ros2_controllers_gazebo.yaml
src/kr20_kr120_description/gazebo_assets/collision/: BAT2.stl  CMG1.stl  CMG2.stl  MTQ12.stl  MTQ_MAG.stl  PCDU.stl  bottom_panel.stl  bottom_panel_gaz.stl  kr120_asse5.stl  kr120_base.stl  kr120_gyro_left.stl  kr120_pinza_left.stl  kr120_pinza_right.stl  kr20_asse3.stl  kr20_asse4.stl  kr20_asse5.stl  kr20_base.stl  kr20_basement.stl  kr20_fixed.stl  kr20_flange.stl  kr20_slide.stl  pareti.stl  rl_lifter.stl  rl_rotary.stl  tray_aoc_full.stl  tray_payload.stl
src/kr20_kr120_description/gazebo_assets/urdf/: CMG2.sdf  bottom_panel.sdf  pinza.xacro  tray_eps.sdf
src/kr20_kr120_description/gazebo_assets/visual/: MTQ12.dae  MTQ_MAG.dae  PCDU.dae  kr120_asse4.dae  kr120_gyro_right.dae  kr120_pinza_right.dae  kr20_asse1.dae  kr20_asse3.dae  pareti.dae  rl_lifter.dae  rl_piastra.dae
src/kr20_kr120_description/launch/: gazebo.launch.py
src/kr20_kr120_description/meshes/: BAT1.dae  ReadMe  kr120_asse3.dae  kr120_base.dae  kr120_basement.dae  kr120_flange.dae  kr120_pinza_left.dae  kr20_asse2.dae  kr20_asse5.dae  kr20_slide.dae  rl_infrastruttura.dae  tray_aoc_CMG2_MTQ_MAG.dae  tray_aoc_full.dae  tray_dhc.dae  tray_eps.dae  tray_payload.dae
src/kr20_kr120_description/mujoco/: MUJOCO_LOG.TXT  README.md  kr20_kr120.urdf.xacro  robot.urdf.bak3  robot.urdf.bak5  robot_inertia_fixed.urdf  robot_mjcf.xml  robot_mjcf.xml.bak_dae2stl  robot_mjcf.xml.bak_visual  start_mujoco.sh  test.py  world_mujoco.xml  xacro_err.txt
src/kr20_kr120_description/mujoco/assets/: BAT1.stl  BAT2.stl  CMG34.dae  CMG34.stl  MTQ12.stl  bottom_panel.stl  kr120_asse1.dae  kr120_asse1.stl  kr120_asse2.dae  kr120_asse2.stl  kr120_asse3.stl  kr120_asse5.dae  kr120_base.dae  kr120_basement.dae  kr120_flange.dae  kr120_flange.stl  kr120_gyro_left.dae  kr120_gyro_left.stl  kr120_gyro_right.mtl  kr120_pinza_left.dae  kr120_pinza_right.stl  kr120_slider.dae  kr120_slider.stl  kr20_asse2.dae  kr20_asse2.stl  kr20_asse3.dae  kr20_asse4.dae  kr20_asse5.dae  kr20_asse5.stl  kr20_base.stl  kr20_basement.dae  kr20_flange.dae  kr20_flange.mtl  kr20_polso.dae  kr20_slide.dae  kr20_slide.stl  rl_lifter.dae  rl_lifter.stl  rl_rotary.dae  rl_rotary.stl  (+12 more)
src/kr20_kr120_description/mujoco/meshes/: MUJOCO_LOG.TXT
src/kr20_kr120_description/mujoco/scenes/: _hello.xml  hello_cube.xml  kuka_cell_scene.xml  scene_wrap_g.xml  scene_wrapper.xml  scene_wrapper_stable.xml  tray_aoc.stl  world_mujoco.xml
src/kr20_kr120_description/mujoco/tools/: fix_bad_inertia.py  fix_mesh_paths_all.py  fix_mesh_paths_text.py
src/kr20_kr120_description/urdf/: BAT1.sdf  CMG1.sdf  MTQ12.sdf  avvitatore.xacro  kr120_inst.urdf.xacro  kr120_macro.xacro  kr20_inst.urdf.xacro  kr20_kr120.urdf.xacro  kr20_kr120.xacro  kr20_kr120_gazebo.urdf.xacro  kr20_macro.xacro  pinza.xacro  tray_payload.sdf
src/kr20_kr120_moveit_demos/: CMakeLists.txt  package.xml
src/kr20_kr120_moveit_demos/include/kr120_coordinator/: motion_primitives.hpp  workflow_context.hpp
src/kr20_kr120_moveit_demos/launch/: coordinator.launch.py  go_to_pose.launch.py  smoke_plan.launch.py
src/kr20_kr120_moveit_demos/src/: go_to_pose.cpp  motion_primitives.cpp  workflow_context.cpp
src/kr20_kr120_moveit_demos/src/nodes/: init_parameters_server.cpp
src/kr20_kr120_mujoco/: CMakeLists.txt  package.xml  package.xml.bak
src/kr20_kr120_mujoco/config/: controllers.yaml
src/kr20_kr120_mujoco/launch/: kuka_cell.launch.py
src/kr20_kr120_mujoco/mjcf/assets/: actuators_auto.xml  demo_control.py  robot.urdf.bak_final  robot_mjcf.xml.bak_meshclean  robot_mjcf.xml.bak_objswap  robot_mjcf.xml.bak_split  scene_wrapper.xml.bak_1757499844  view_cube.py
src/kr20_kr120_mujoco/mjcf/assets/assets/: BAT1.dae  BAT2.dae  CMG1.dae  CMG1.stl  CMG2.dae  CMG2.stl  MTQ12.dae  MTQ3_MAG.dae  MTQ3_MAG.stl  MTQ_MAG.dae  MTQ_MAG.stl  PCDU.dae  PCDU.mtl  PCDU.stl  bottom_panel.dae  bottom_panel_gaz.stl  kr120_asse3.dae  kr120_asse4.dae  (+44 more)
src/kr20_kr120_mujoco/urdf/: ros2_control_only.urdf.xacro
src/ros_http_bridge2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros_http_bridge2/ros_http_bridge2/: combined_dsl.lark  confirmation_service_rclpy.py  dsl_models.py  dsl_parser.py  functions.py  main.py  mock_servers.py  robot_manager.py  ros_http_bridge_rclpy.py  workflow.workflow  workflow_real_example.workflow
(+112 files in other folders)
