<?xml version="1.0"?>
<package format="3">
  <name>kr20_kr120</name>
  <version>0.0.1</version>
  <description>KR20/KR120 MoveIt + Gazebo control (ROS 2)</description>

  <maintainer email="davide@todo.todo">davide</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- MoveIt 2 -->
  <depend>moveit_ros_planning_interface</depend>

  <!-- Gazebo (classic) -->
  <depend>gazebo_msgs</depend>

  <!-- Link attacher (ROS 2 build of the plugin). Keep only if you actually have it installed. -->
  <depend>gazebo_ros_link_attacher</depend>

  <!-- Your ROS 2 interfaces -->
  <depend>custom_interfaces</depend>

  <!-- Only if you really use it in code -->
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
