<?xml version="1.0"?>
<package format="3">
  <name>ros_http_bridge2</name>
  <version>0.0.1</version>
  <description>HTTP ↔ ROS 2 bridge with DSL runner</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- Build with CMake for Python packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime (exec) deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-lark</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
